css changes to fix issue whereby nav bar on smaller screens covered breadcrumb and h1 on page

--- a/wp-content/themes/ppo/assets/less/app.less
+++ b/wp-content/themes/ppo/assets/less/app.less
@@ -245,7 +245,7 @@ nav>ul>li>.menu-container>ul>li {
    ========================================================================== */
 
 div.wrap {
-    margin-top: 90px;
+    margin-top: 155px;
 }
 
 .single .navigation {
@@ -895,6 +895,10 @@ figure.alignnone { margin-left: 0; margin-right: 0; }
             max-width: 100%; padding: 10px; max-height: 70px; 
         }
     }
+
+    div.wrap {
+    margin-top: 94px;
+}
     
 }
 
